updated openapi spec
