# src/main/kotlin/ru/headh/kosti/telegrambot/handler/user/AuthHandler.kt
@@ -4,6 +4,7 @@ import com.fasterxml.jackson.module.kotlin.jacksonObjectMapper
 import com.fasterxml.jackson.module.kotlin.readValue
 import org.springframework.stereotype.Component
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboardRemove
+import ru.headh.kosti.apigateway.client.model.SuccessAuthDtoGen
 import ru.headh.kosti.apigateway.client.model.UserAuthRequestGenGen
 import ru.headh.kosti.telegrambot.aspect.AuthAndRegisterPointcut
 import ru.headh.kosti.telegrambot.client.UserServiceClient
@@ -16,7 +17,6 @@ import ru.headh.kosti.telegrambot.repository.RedisRepository
 import ru.headh.kosti.telegrambot.sender.TelegramSender
 
 @Component
-
 class AuthHandler(
     private val mainMenuKeyboard: MainMenuKeyboard,
     private val userClient: UserServiceClient,
@@ -29,7 +29,7 @@ class AuthHandler(
     @AuthAndRegisterPointcut
     override fun handle(data: AuthActionData) {
         val authData: UserAuthRequestGenGen = mapper.readValue(data.message)
-        val token = userClient.auth(authData)
+        val token = userClient.auth(authData) as SuccessAuthDtoGen
 
         redisRepository.save(UserToken(data.chatId, token.accessToken, token.refreshToken))
 
